<resources>
    <string name="app_name">Asteroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asteroid_status_image">asteroid status image</string>
    <string name="close_approach_date">Close approach date</string>
    <string name="absolute_magnitude">Absolute magnitude</string>
    <string name="help_info_icon">help info icon</string>
    <string name="estimated_diameter">Estimated diameter</string>
    <string name="distance_from_earth">Distance from earth</string>
    <string name="hazardous_text">Potentially Hazardous</string>
    <string name="not_hazardous_text">Not Hazardous</string>
    <string name="relative_velocity">Relative velocity</string>
    <string name="hazardous_icon">hazardous icon</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="status_loader">Status loader</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from earth to the sun and equal to about 150 million kilometres (93 million miles)</string>
</resources>