<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.goodayedi.asteroid.viewmodel.DetailViewModel" />
    </data>

    <ScrollView
        android:background="#111111"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <ImageView
                android:id="@+id/main_photo_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent=".45"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/asteroid_status_image"
                android:scaleType="centerCrop"
                app:asteroidStatusImage="@{viewModel.selectedProperty._potentially_hazardous_asteroid}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/codename_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f5f5f5"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                tools:text="@{viewModel.selectedProperty.name}" />

            <TextView
                android:id="@+id/closeApproachDate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/close_approach_date"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codename_tv" />

            <TextView
                android:id="@+id/closeApproachDateValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/closeApproachDate_tv"
                tools:text="@{viewModel.selectedProperty.close_approach_date}" />

            <TextView
                android:id="@+id/absMagnitude_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/absolute_magnitude"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/closeApproachDateValue_tv" />

            <TextView
                android:id="@+id/absMagnitudeValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:text="@{String.valueOf(viewModel.selectedProperty.absolute_magnitude)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absMagnitude_tv"
                tools:text="16.480000" />

            <ImageView
                android:id="@+id/help_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/help_info_icon"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/absMagnitudeValue_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/absMagnitude_tv"
                app:srcCompat="@drawable/ic_help" />

            <TextView
                android:id="@+id/estDiaMax_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/estimated_diameter"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absMagnitudeValue_tv" />

            <TextView
                android:id="@+id/estDiaMaxValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:text="@{String.valueOf(viewModel.selectedProperty.estimated_diameter_max)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estDiaMax_tv"
                tools:text="3.0063530383 km" />

            <TextView
                android:id="@+id/relativeVelocity_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Relative velocity"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/estDiaMaxValue_tv" />

            <TextView
                android:id="@+id/relativeVelocityValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeVelocity_tv"
                app:text="@{String.valueOf(viewModel.selectedProperty.relative_velocity)}"
                tools:text="14.77157427 km/s" />

            <TextView
                android:id="@+id/distanceFromEarth_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/distance_from_earth"
                android:textColor="#e5e5e5"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeVelocityValue_tv" />

            <TextView
                android:id="@+id/distanceFromEarthValue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#f9f9f9"
                android:textSize="16.5sp"
                app:text="@{String.valueOf(viewModel.selectedProperty.miss_distance)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distanceFromEarth_tv"
                tools:text="0.49229903 km" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>